# fastapi_chatapp

./: Dockerfile  README.md  docker-compose.dev.yml  docker-compose.pro.yml  pyproject.toml  requirements.txt  ruff.toml  run
docker/nginx/: nginx.conf  nginx.dev.conf
docs/: db_schema.dbml  readme.md
public/: chat_client.js  index.html
src/: main.py  settings.py
src/auth/: apis.py  schemas.py  services.py
src/chat/: events.py  models.py  server.py
src/chat/services/: auth.py  clients.py  group.py  private.py  system.py
src/db/: connection.py  models.py
src/users/: models.py
src/utils/: chat.py  jwt.py  users.py
