[tool.poetry]
name = "chatroom"
version = "0.1.0"
description = ""
authors = ["Mohamad Zahiri <mamadzhri@gamil.com>"]
readme = "README.md"
package-mode = false

[tool.poetry.dependencies]
python = "^3.12"
fastapi = "^0.111.1"
uvicorn = {extras = ["standard"], version = "^0.30.3"}
pyjwt = {extras = ["crypto"], version = "^2.8.0"}
pydantic = "^2.8.2"
python-decouple = "^3.8"
pydantic-settings = "^2.3.4"
motor = "^3.5.1"
passlib = {extras = ["bcrypt"], version = "^1.7.4"}


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
